<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.group.project.restaurantbuddy.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_open_menu"
        android:name="com.group.project.restaurantbuddy.ui.food.MenuFragment"
        android:label="@string/menu_food"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_talk"
        android:name="com.group.project.restaurantbuddy.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_talk"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_pay"
        android:name="com.group.project.restaurantbuddy.ui.menu.MenuLoader"
        android:label="@string/menu_pay"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.group.project.restaurantbuddy.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_sign"
        android:name="com.group.project.restaurantbuddy.ui.sign.SignInFragment"
        android:label="@string/menu_sign"
        tools:layout="@layout/fragment_sign" />
    <fragment
        android:id="@id/nav_request"
        android:name="com.group.project.restaurantbuddy.ui.request.RequestFragment"
        android:label="Request"
        tools:layout="@layout/request_fragment"/>
    <fragment
        android:id="@id/payment"
        android:name="com.group.project.restaurantbuddy.ui.payment.PaymentFragment"
        android:label="Payment"
        tools:layout="@layout/payment_fragment"/>
    <fragment
        android:id="@+id/mainReservation"
        android:name="com.group.project.restaurantbuddy.ui.MakeReservation.MainReservation"
        android:label="Reserve"
        tools:layout="@layout/fragment_reservation" />
</navigation>